[package]
name = "metrics-gatherer"
version = "0.1.0"
authors = ["Blake Johnson <johnsonblake1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
reqwest = { version = "0.10", default_features=false, features= ["rustls-tls", "json"] }
rusoto_core = { version = "0.45.0", default_features=false, features = ["rustls"] }
rusoto_cloudwatch = { version = "0.45.0", default_features=false, features = ["rustls"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"