[package]
name = "fishnet-metrics-gatherer"
version = "0.5.0"
authors = ["Blake Johnson <johnsonblake1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3"
reqwest = { version = "0.11", default_features=false, features= ["rustls-tls", "json"] }
rusoto_core = { version = "0.46", default_features=false, features = ["rustls"] }
rusoto_cloudwatch = { version = "0.46", default_features=false, features = ["rustls"] }
tokio = { version = "1.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1.7"
